<resources>
    <string name="login">Login</string>
    <string name="app_name">PeTracker Views</string>
    <string name="edit_pet_info_name">Edit Pet Info</string>
    <string name="edit_account_info_name">Edit Account Info</string>
    <string name="edit_personal_info_name">Edit Personal Info</string>
    <string name="title_activity_g_p_s_track_activity">GPS tracking Map</string>
    <string name="google_maps_key">AIzaSyDjxcROlBH9rZmNgeOHJh8FqnBOzen42Os</string>
    <string name="title_activity_test_login">TestLoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register_here">Register here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_now">Login now!</string>
    <string name="register">Register</string>
    <string name="customer_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="get_qr_code">Get QR Code</string>
</resources>